--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "use-sound": "^4.0.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
