--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "prettier": {
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "printWidth": 120,
+    "bracketSpacing": true,
+    "singleAttributePerLine": true
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
