--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@material-design-icons/svg": "^0.14.13",
     "date-fns": "^3.6.0",
+    "laravel-vite-plugin": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "use-sound": "^4.0.1",
