--- a/package.json
+++ b/package.json
@@ -3,15 +3,6 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "prettier": {
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "tabWidth": 4,
-    "printWidth": 120,
-    "bracketSpacing": true,
-    "singleAttributePerLine": true
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -37,6 +28,7 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "jest": "^29.7.0",
